# game-of-sound

./: README.md  pyproject.toml
game_of_sound/: __init__.py  game.py  game_of_life.py
