[tool.poetry]
name = "game-of-sound"
version = "0.1.0"
description = ""
authors = ["Moritz Klein <moritz.klein@pm.me>"]
readme = "README.md"
packages = [{include = "game_of_sound"}]

[tool.poetry.scripts]
game = "game_of_sound:game"

[tool.poetry.dependencies]
python = "^3.8.15"
librosa = "^0.9.2"
pygame = "^2.1.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
matplotlib = "^3.6.2"
pyqt5 = "^5.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
